--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -16,7 +16,7 @@
         "dest": "/index.js",
         "methods":["GET","POST","PUT","DELETE","PATCH","OPTIONS"],
         "headers":{
-          "Access-Control-Allow-Origin":"*"
+          "Access-Control-Allow-Origin":"https://job-portal-frontend-blond.vercel.app"
         }
       }
     ]
