--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -10,15 +10,12 @@
         "use": "@vercel/node"
       }
     ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/index.js",
-        "methods":["GET","POST","PUT","DELETE","PATCH","OPTIONS"],
-        "headers":{
-          "Access-Control-Allow-Origin":"https://job-portal-frontend-blond.vercel.app"
-        }
-      }
-    ]
-  }
+   "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/index.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
+    }
+  ]
+}
   
