--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -14,7 +14,10 @@
     {
       "src": "/api/(.*)",
       "dest": "/index.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+        "headers":{
+          "Access-Control-Allow-Origin":"https://job-portal-frontend-blond.vercel.app"
+        }
     }
   ]
 }
